@@ -240,11 +240,17 @@ class FileController extends \GO\Base\Controller\AbstractModelController {
 				throw new \Exception(\GO::t('downloadLinkExpired', 'files'));				
 		}else
 		{
-			if(!\GO::user())
-				\GO\Base\Util\Http::basicAuth();
-				
-			if(!$file->checkPermissionLevel(\GO\Base\Model\Acl::READ_PERMISSION))
-				throw new \GO\Base\Exception\AccessDenied();
+			
+			$public = substr($file->path,0,6)=='public';
+			
+			if(!$public){
+			
+				if(!\GO::user())
+					\GO\Base\Util\Http::basicAuth();
+
+				if(!$file->checkPermissionLevel(\GO\Base\Model\Acl::READ_PERMISSION))
+					throw new \GO\Base\Exception\AccessDenied();
+			}
 		}
 
 		
