@@ -1,3 +1,5 @@
+- customcss: Make public uploaded files accessible without logging in to GO.
+
 04-09-2014 6.0.21
 - Bug in invoicing from projects
 
